converted skeleton and product data in different small components

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -475,6 +475,10 @@ a {
   /* border: 2px solid rgb(255, 255, 255); */
 }
 
+.MuiSnackbarContent-root {
+  background-color: rgb(40, 40, 40);
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
