--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -475,8 +475,27 @@ a {
   /* border: 2px solid rgb(255, 255, 255); */
 }
 
+.MuiSnackbar-root {
+  background-color: transparent;
+  box-shadow: "0px 8px 16px rgba(0, 0, 0, 0.1)";
+}
+
 .MuiSnackbarContent-root {
-  background-color: rgb(40, 40, 40);
+  height: 7vh;
+  background-color: white;
+  color: #2e7d32;
+  font-size: medium;
+}
+
+.ContactUsSnackBarError {
+  height: 7vh;
+  background-color: white;
+  color: #8f0000;
+  font-size: medium;
+}
+
+.p-menuitem-link {
+  text-decoration: none;
 }
 
 @media (prefers-color-scheme: dark) {
